apps/upsnap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: upsnap
  labels:
    pod-security.kubernetes.io/enforce: privileged
